--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
               <div class="warning">Макс. 10 символов</div>
             </div>
 
-            <form action="submit">
+            <form id="commentForm" action="submit">
               <label for="comment"></label>
               <textarea
                 name="comment"
@@ -62,6 +62,9 @@
             </form>
           </div>
         </div>
+
+
+
       </div>
     </section>
   </body>
