--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,10 @@
 
         <div class="commentsBlock">
           <div class="newCommentBlock">
-            <img id="userAvatar" alt="Аватар пользователя" />
+            <img class="userAvatar" alt="Аватар пользователя" />
             <div class="userNameAndFormWrapper">
               <div class="userNameWrapper">
-                <span id="userName"></span>
+                <span class="userName"></span>
 
                 <div class="warning">Макс. 10 символов</div>
               </div>
@@ -55,7 +55,7 @@
                   id="comment"
                   cols="30"
                   rows="10"
-                  maxlength="10"
+                  maxlength="1000"
                   placeholder="Введите текст сообщения"
                   required
                 ></textarea>
@@ -69,3 +69,4 @@
     </section>
   </body>
 </html>
+
