--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
       <div class="wrapper">
         <div class="contentMock"></div>
-        <nav class="comment-filters">
+        <nav class="comments-filter">
           <ul class="filter-links">
             <li>
               <a class="comments-link active" href="#">Комментарии</a>
