replyTo logic initialized

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
                   placeholder="Введите текст сообщения"
                   required
                 ></textarea>
-
+                <input type="hidden" id="replyTo" value="">
                 <button type="submit" class="send-btn btn">Отправить</button>
               </form>
             </div>
